{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 83,
  "lineage": "de3ebc56-7ec7-fa16-2126-1d0eeea2ce5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default_GW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0571a8037a24f5f80",
            "owner_id": "470535650044",
            "tags": {
              "Name": "My VPC Internet Gateway"
            },
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "default_Security_ACL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-07f605f4deadd40ea",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "470535650044",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0e4d84009128e30d0"
            ],
            "tags": {
              "Name": "My VPC ACL"
            },
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_subnet.default_Subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0571a8037a24f5f80",
            "id": "r-rtb-027158262cb358b471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027158262cb358b47",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default_GW",
            "aws_route_table.default_route_table",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-027158262cb358b47",
            "owner_id": "470535650044",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "My VPC Route Table"
            },
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b98f77ef7bf720e9",
            "route_table_id": "rtb-027158262cb358b47",
            "subnet_id": "subnet-0e4d84009128e30d0"
          },
          "dependencies": [
            "aws_route_table.default_route_table",
            "aws_subnet.default_Subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_Security_Group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:security-group/sg-08c6dfe07de4225a1",
            "description": "My VPC Security Group",
            "egress": [],
            "id": "sg-08c6dfe07de4225a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "My VPC Security Group",
            "name_prefix": null,
            "owner_id": "470535650044",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:security-group/sg-0023196a2e02d88f9",
            "description": "elb security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0023196a2e02d88f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_elb",
            "name_prefix": null,
            "owner_id": "470535650044",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_admin",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:security-group/sg-0478608672996e737",
            "description": "allow all traffic from bastion host",
            "egress": [],
            "id": "sg-0478608672996e737",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.188.48/28"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_allow_bhost_traffic",
            "name_prefix": null,
            "owner_id": "470535650044",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:security-group/sg-05e02a6696872f94f",
            "description": "allow all outcomming traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e02a6696872f94f",
            "ingress": [],
            "name": "sg_allow_internet",
            "name_prefix": null,
            "owner_id": "470535650044",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_app2db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:security-group/sg-011e441ff6e275e9d",
            "description": "allow traffic from app hosts to databases",
            "egress": [],
            "id": "sg-011e441ff6e275e9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.188.16/28"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_allow_app_to_db",
            "name_prefix": null,
            "owner_id": "470535650044",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:security-group/sg-0a9dd58c7d415a56a",
            "description": "allow traffic on bastion host",
            "egress": [],
            "id": "sg-0a9dd58c7d415a56a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_bastion",
            "name_prefix": null,
            "owner_id": "470535650044",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lb2app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:security-group/sg-06ad83e74c1ed30eb",
            "description": "allow traffic from load balancer and to load balancer",
            "egress": [],
            "id": "sg-06ad83e74c1ed30eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.188.32/28"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.188.32/28"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_allow_lb_to_app",
            "name_prefix": null,
            "owner_id": "470535650044",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web2app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:security-group/sg-0f73488f03d3a9e94",
            "description": "allow traffic from app hosts to databases",
            "egress": [],
            "id": "sg-0f73488f03d3a9e94",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.188.16/28"
                ],
                "description": "",
                "from_port": 10051,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10051
              }
            ],
            "name": "sg_allow_web_to_app",
            "name_prefix": null,
            "owner_id": "470535650044",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:subnet/subnet-0e4d84009128e30d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e4d84009128e30d0",
            "map_public_ip_on_launch": true,
            "owner_id": "470535650044",
            "tags": {
              "Name": "My VPC Subnet"
            },
            "vpc_id": "vpc-04c0110ca4a150876"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470535650044:vpc/vpc-04c0110ca4a150876",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08f1bb08457d21403",
            "default_route_table_id": "rtb-0789fe9a4ffdc959d",
            "default_security_group_id": "sg-0a3b2197c1eee8159",
            "dhcp_options_id": "dopt-3c9c5546",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04c0110ca4a150876",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0789fe9a4ffdc959d",
            "owner_id": "470535650044",
            "tags": {
              "Name": "My_VPC"
            }
          }
        }
      ]
    }
  ]
}